--- a/src/basic/basic-layout-1.html
+++ b/src/basic/basic-layout-1.html
@@ -7,12 +7,39 @@
     <link rel="stylesheet" href="../style.css" />
     <style>
       /* Doe hier jouw ding! */
+    body{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr;
+      gap: 1em;
+      grid-template-areas: 
+      "header header"
+      "nav main"
+      "nav main"
+      "footer footer";
+     
+    }
+    header{
+      grid-area: header;
+    }
+    nav{
+      grid-area: nav;
+      width: 300px;
+    }
+    main{
+      grid-area: main;
+      width: 1000px;
+    }
+    footer{
+      grid-area: footer;
+    }
+      
     </style>
   </head>
   <body id="basic-layout-1">
     <header><h1>Basic Layout 1</h1></header>
     <nav><a href="../index.html">Terug naar het overzicht</a></nav>
-    <main></main>
-    <footer></footer>
+    <main>main</main>
+    <footer>footer</footer>
   </body>
 </html>
