--- a/src/basic/basic-layout-2.html
+++ b/src/basic/basic-layout-2.html
@@ -11,7 +11,7 @@
       body{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 0fr 1fr 1fr 0fr;
+        grid-template-rows: 1fr 0fr 2fr 0fr;
         gap: 10px;
         grid-template-areas: 
         "header"
