--- a/src/basic/basic-layout-5.html
+++ b/src/basic/basic-layout-5.html
@@ -7,12 +7,36 @@
     <link rel="stylesheet" href="../style.css" />
     <style>
       /* Doe hier jouw ding! */
+      body{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 4fr 1fr;
+        gap: 10px;
+        grid-template-areas: 
+        "header header"
+        "main nav"
+        "main footer";
+
+      }
+      header{
+        grid-area: header;
+      }
+      nav{
+        grid-area: nav;
+      }
+      main{
+        grid-area: main;
+      }
+      footer{
+        grid-area: footer;
+      }
+
     </style>
   </head>
   <body id="basic-layout-5">
     <header><h1>Basic Layout 5</h1></header>
     <nav><a href="../index.html">Terug naar het overzicht</a></nav>
-    <main></main>
-    <footer></footer>
+    <main>main</main>
+    <footer>footer</footer>
   </body>
 </html>
