--- a/src/basic/basic-layout-8.html
+++ b/src/basic/basic-layout-8.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="../style.css" />
     <style>
       /* Doe hier jouw ding! */
+      body{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 3fr;
+        gap: 20px;
+        grid-template-areas: 
+        "header header header"
+        "nav main footer"
+        ;
+      }
+
+
+      header{
+        grid-area: header;
+      }
+      nav{
+        grid-area: nav;
+      }
+      main{
+        grid-area: main;
+      }
+      footer{
+        grid-area: footer;
+      }
     </style>
   </head>
   <body id="basic-layout-8">
