--- a/src/basic/basic-layout-9.html
+++ b/src/basic/basic-layout-9.html
@@ -7,12 +7,37 @@
     <link rel="stylesheet" href="../style.css" />
     <style>
       /* Doe hier jouw ding! */
+      body{
+        display: grid;
+        grid-template-columns: 0fr 1fr 0fr;
+        grid-template-rows: 1fr 2fr 1fr;
+        gap: 20px;
+        grid-template-areas: 
+        "header nav"
+        "main main"
+        "footer footer"
+        ;
+      }
+
+
+      header{
+        grid-area: header;
+      }
+      nav{
+        grid-area: nav;
+      }
+      main{
+        grid-area: main;
+      }
+      footer{
+        grid-area: footer;
+      }
     </style>
   </head>
   <body id="basic-layout-9">
     <header><h1>Basic Layout 9</h1></header>
     <nav><a href="../index.html">Terug naar het overzicht</a></nav>
-    <main></main>
-    <footer></footer>
+    <main>main</main>
+    <footer>footer</footer>
   </body>
 </html>
